--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+button {
+    padding: 5px 20px;
+    margin: 7px;
+    border-radius: 10px;
+}
+
+.wider-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 @keyframes color-change { 
     from {background-color: orange;} 
     to {background-color: grey;}
